test/compile_errors/err_regex_compound_no_capture.w
//! expect-check-fail: undefined variable

fn main:
    let line = "status=200"
    let ready = true
    if line =~ /^status=(\d+)$/ and ready:
        print($1)
